sonar-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar-postgres
  template:
    metadata:
      name: sonar-postgres
      labels:
        app: sonar-postgres
    spec:
      containers:
        - image: postgres:latest
          name: sonar-postgres
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            # This name must match the volumes.name below.
            - name: data-disk
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name: data-disk
          persistentVolumeClaim:
            claimName: claim-postgres
