sonar-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar-postgres
  name: sonar-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: sonar-postgres
