sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    app: sonarqube
